tests/testcases/valid/09_control_flow_selection.ciel
int main() {
    int v = 5;

    if (v > 0) { int pos = 1; }

    if (v % 2 == 0) { int even = 1; } else { int odd = 1; }

    if (v < 0) { int neg = 1; }
    else if (v == 0) { int zero = 1; }
    else { int pos2 = 1; }

    int day_of_week = 1;
    switch (day_of_week) {
        case 1:
        case 2:
        case 3: { int weekday = 1; break; }
        case 6:
        case 7: { int weekend = 1; break; }
        default: { int other = 1; }
    }

    int x = 5;
    if (x > 0) {
        if (x < 10) { int valid_range = 1; }
    }

    return 0;
}
